tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__RecycleGallium-AAAAAAAAAAAAAAAAAAALdQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2933,
  "prerequisites": [
    2929
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You have two options to deal with it.\n\n1) React with Sodium Dust in a chemical reactor.\n\n2) Mix it with Indium Phosphate Dust in a mixer.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lRecycle Gallium",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2929
  ],
  "rewards": [],
  "tasks": []
}
