tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__RecycleWasteWate-AAAAAAAAAAAAAAAAAAALcw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2931,
  "prerequisites": [
    2923
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The 'Waste Water' is still very useful to some extent and you can get something interesting from it.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lRecycle Waste Water",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2923
  ],
  "rewards": [],
  "tasks": []
}
