tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__RelentlessGlue-eZADH1WASo6NLBUTKjLNGQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 6161006264696622361,
  "prerequisites": [
    1493
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Ethyl Cyanoacrylate, commonly known as Super Glue is the best glue there is. But with great power comes... great complexity. It's not needed now and probably for the next few tiers, but it will make your recipes more efficient and will be necessary in the lategame.\n\n[note]Technically this line is available in IV, but only optional. Show your true skills by searching the recipes in NEI yourself![/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lRelentless Glue",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1493
  ],
  "rewards": [],
  "tasks": []
}
