tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__SeparateSolvent-AAAAAAAAAAAAAAAAAAALbQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2925,
  "prerequisites": [
    2924
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Distill the antimony pentachloride solution to get the pure antimony pentachloride liquid. You can recycle §6ALL§r of the ether.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lSeparate Solvent",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2924
  ],
  "rewards": [],
  "tasks": []
}
