tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier6LuV-AAAAAAAAAAAAAAAAAAAACA==__Separation-AAAAAAAAAAAAAAAAAAALfA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2940,
  "prerequisites": [
    2930,
    1688,
    2936
  ],
  "properties": {
    "auto_claim": false,
    "desc": "IT COMES BACK AGAINNNNN? ! ! !\n\n[note]You can find out more about the Neutron Activator and the Precise Assembler in the Multiblock tab.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§c§lSeparation",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2930,
    1688,
    2936
  ],
  "rewards": [],
  "tasks": []
}
